--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ main section p {
   font-family: "Titillium Web", sans-serif;
   margin-left: 2rem;
   margin-right: 2rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 @media screen and (min-width: 1080px) {
   main section p {
@@ -525,6 +525,11 @@ li a {
 }
 .carousel h2 {
   margin: 0 0 0 0;
+}
+@media screen and (min-width: 1080px) {
+  .carousel h2 {
+    align-self: flex-start;
+  }
 }
 .carousel p {
   padding-bottom: 0;
